--- a/.github/workflows/build-check.yml
+++ b/.github/workflows/build-check.yml
@@ -19,7 +19,9 @@ jobs:
           node-version: 18 
 
       - name: Install dependencies
+        working-directory: frontend
         run: npm install
 
       - name: Build project
+        working-directory: frontend
         run: npm run build
