--- a/.github/workflows/prettier-formatting.yml
+++ b/.github/workflows/prettier-formatting.yml
@@ -19,8 +19,10 @@ jobs:
           node-version: 18 
 
       - name: Install dependencies
+        working-directory: frontend
         run: npm install
 
       - name: Run Prettier check
+        working-directory: frontend
         run: npx prettier --check .
 
